- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.2.2
 - 
    None
 - 
    MSYS2 or Qt's MinGW compiler on Windows 11
 
- 
        
 - 
        7246058dfd (qt/qtbase/dev) 8fe51e489b (qt/qtbase/6.3) 9f3099d259 (qt/qtbase/6.2) 9f3099d259 (qt/tqtc-qtbase/6.2)
 
When I compile the project attached using Qt Creator, I get the following error message. It seems that qmake adds @ mark after then the output file name when it calls g++ on either Qt's MinGW or MSYS2 platform. There isn't such a problem when building on Linux or macOS platforms.
15:53:20: Running steps for project ModPlugPlayer...
15:53:20: Configuration unchanged, skipping qmake step.
15:53:20: Starting: "C:\Qt\Tools\mingw900_64\bin\mingw32-make.exe" -j6
C:/Qt/Tools/mingw900_64/bin/mingw32-make -f Makefile.Debug
mingw32-make[1]: Entering directory 'C:/Projects_/build-ModPlugPlayer-Desktop_Qt_6_2_2_MinGW_64_bit-Debug'
g++ -Wl,-subsystem,windows -mthreads -o "debug\ModPlug Player.exe" @  C:\Qt\6.2.2\mingw_64\lib\libQt6Widgets.a C:\Qt\6.2.2\mingw_64\lib\libQt6Gui.a C:\Qt\6.2.2\mingw_64\lib\libQt6Core.a -lmingw32 C:\Qt\6.2.2\mingw_64\lib\libQt6EntryPoint.a -lshell32  
C:/Qt/Tools/mingw900_64/bin/../lib/gcc/x86_64-w64-mingw32/11.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot find @: No such file or directory
collect2.exe: error: ld returned 1 exit status
mingw32-make[1]: Leaving directory 'C:/Projects_/build-ModPlugPlayer-Desktop_Qt_6_2_2_MinGW_64_bit-Debug'
mingw32-make[1]: *** [Makefile.Debug:95: debug/ModPlug Player.exe] Error 1
mingw32-make: *** [Makefile:45: debug] Error 2
15:53:22: The process "C:\Qt\Tools\mingw900_64\bin\mingw32-make.exe" exited with code 2.
Error while building/deploying project ModPlugPlayer (kit: Desktop Qt 6.2.2 MinGW 64-bit)
When executing step "Make"
15:53:22: Elapsed time: 00:02.